# beebliotheca

./: .env.docker.example  .gitignore  1start-all.sh  FEATURES.md  MIGRATION_PROGRESS.md  README-SCRIPTS.md  README.md  TESTING-AUTH-UI.md  TESTING-LIBRARY-MANAGEMENT.md  TESTING-PHASE-1.md  TESTING-PHASE-2-MIGRATION.md  continuation.md  docker-compose.yml  figma.md  init.md  openapi.json  start-all.sh  test-hello.sh
backend/: .env.example  init_db.py  init_db_sync.py  pyproject.toml  verify_migration.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: __init__.py  admin.py  auth.py  book_clubs.py  books.py  enrichment.py  invitations.py  libraries.py  lists.py  notifications.py  series.py
backend/app/api/schemas/: admin.py  book_clubs.py  library_books.py  reading_lists.py
backend/app/api/utils/: library_access.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  book.py  book_club.py  book_v2.py  enrichment.py  library.py  library_book.py  library_invitation.py  library_member.py  notification.py  reading_list.py  series.py  user.py  user_book_data.py
backend/app/services/: __init__.py  auth.py  enrichment.py  metadata.py
backend/migrations/: create_book_clubs.py  create_reading_lists.py  enhance_series_model.py  fix_series_unique_constraint.py  migrate_to_phase2.py  update_phase2_foreign_keys.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_book_clubs.py  test_books.py  test_libraries.py  test_lists.py
docker/: app.Dockerfile  backend.Dockerfile  (+2 more)
(+134 files in other folders)
